--- a/form.html
+++ b/form.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>Prueba Segment<span id="selection-marker-1" class="redactor-selection-marker"></span></title>
     <script>
@@ -10,10 +9,9 @@
   }}();
 </script>
 </head>
-
 <body>
-    <h1>Segment University</h1>
-    <p>Sources Demo -- Form Submission</p>
+    <h1>Prueba Segment</h1>
+    <p>Demo -- Form Submission</p>
     <form name="form" onsubmit="identify(event)">
         <br><br><br> 
         <br><br> Name: <input name="fullname" size="75" type="text" />
