--- a/form.html
+++ b/form.html
@@ -33,7 +33,8 @@
         <br><br>
         <textarea cols="81" name="details" rows="10">
     </textarea>
-        <br><br<br><input name="submit" type="submit" value="submit" />
+        <input type="submit" value="Submit">
+<!--       <br><br<br><input name="submit" type="submit" value="submit" /> -->
     </form>
     <script type="text/javascript">
         function identify(e) {
