--- a/form.html
+++ b/form.html
@@ -58,8 +58,7 @@
             var home_state = form["home_state"].value;
             var rn = Math.floor((Math.random() * 1000000) + 1);
             
-            /* analytics.identify(12345, { */
-            analytics.identify(userId, {
+             analytics.identify(12345, { 
                 email: email,
                 title: title,
                 age: age,
