--- a/form.html
+++ b/form.html
@@ -64,7 +64,7 @@
                 title: title,
                 age: age,
                 gender: gender,
-                leadSource: 'Newsletter',
+                leadSource: 'formulario_FlaminHotxGiraRefrescante_gt',
                 is_first_session: 'true',
                 clicked_random_link: 'true',
                 viewed_product: 'true',
@@ -73,7 +73,11 @@
                     name: comp_name
                 },
                 name: fullname,
-                category: 'Marketing',
+                /* Atributos no Visibles*/
+                category: 'PepsiMusic',
+                EventoPaís: "formulario_gt",
+                Evento Categoría: "formulario_PepsiMusic_gt",
+                Evento Promoción: "formulario_FlaminHotxGiraRefrescante_gt",
                 phone: phone,
                 state: state,
                 rating: rating,
