--- a/form.html
+++ b/form.html
@@ -1,21 +1,51 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Prueba Segment<span id="selection-marker-1" class="redactor-selection-marker"></span></title>
+    <title>Ejemplo Segment<span id="selection-marker-1" class="redactor-selection-marker"></span></title>
     <script>
-  !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","screen","once","off","on","addSourceMiddleware","addIntegrationMiddleware","setAnonymousId","addDestinationMiddleware","register"];analytics.factory=function(e){return function(){if(window.analytics.initialized)return window.analytics[e].apply(window.analytics,arguments);var i=Array.prototype.slice.call(arguments);if(["track","screen","alias","group","page","identify"].indexOf(e)>-1){var c=document.querySelector("link[rel='canonical']");i.push({__t:"bpc",c:c&&c.getAttribute("href")||void 0,p:location.pathname,u:location.href,s:location.search,t:document.title,r:document.referrer})}i.unshift(e);analytics.push(i);return analytics}};for(var i=0;i<analytics.methods.length;i++){var key=analytics.methods[i];analytics[key]=analytics.factory(key)}analytics.load=function(key,i){var t=document.createElement("script");t.type="text/javascript";t.async=!0;t.src="https://cdn.segment.com/analytics.js/v1/" + key + "/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(t,n);analytics._loadOptions=i};analytics._writeKey="SG46KxtqR1eNZDnVHACJFwk3atu9Fl0x";;analytics.SNIPPET_VERSION="5.2.0";
-  analytics.load("SG46KxtqR1eNZDnVHACJFwk3atu9Fl0x");
-  analytics.page();
-  }}();
-</script>
+        ! function() {
+            var analytics = window.analytics = window.analytics || [];
+            if (!analytics.initialize)
+                if (analytics.invoked) window.console && console.error && console.error("Segment snippet included twice.");
+                else {
+                    analytics.invoked = !0;
+                    analytics.methods = ["trackSubmit", "trackClick", "trackLink", "trackForm", "pageview", "identify", "reset", "group", "track", "ready", "alias", "debug", "page", "once", "off", "on"];
+                    analytics.factory = function(t) {
+                        return function() {
+                            var e = Array.prototype.slice.call(arguments);
+                            e.unshift(t);
+                            analytics.push(e);
+                            return analytics
+                        }
+                    };
+                    for (var t = 0; t < analytics.methods.length; t++) {
+                        var e = analytics.methods[t];
+                        analytics[e] = analytics.factory(e)
+                    }
+                    analytics.load = function(t, e) {
+                        var n = document.createElement("script");
+                        n.type = "text/javascript";
+                        n.async = !0;
+                        n.src = ("https:" === document.location.protocol ? "https://" : "http://") + "cdn.segment.com/analytics.js/v1/" + t + "/analytics.min.js";
+                        var o = document.getElementsByTagName("script")[0];
+                        o.parentNode.insertBefore(n, o);
+                        analytics._loadOptions = e
+                    };
+                    analytics.SNIPPET_VERSION = "4.1.0";
+                    analytics.load("Ptn5JylAqegn1RQEo7xEHs8iBOTH8tsE");
+                    analytics.page();
+                }
+        }();
+    </script>
 </head>
+
 <body>
-    <h1>Prueba Segment</h1>
-    <p>Demo -- Form Submission</p>
+    <h1>Segment University</h1>
+    <p>Sources Demo -- Form Submission</p>
     <form name="form" onsubmit="identify(event)">
         <br><br><br> 
         <br><br> Name: <input name="fullname" size="75" type="text" />
-        <br><br> Apellidos: <input apellidos="apellidos" size="75" type="text" />
         <br><br> Age: <input name="age" size="75" type="text" />
         <br><br> Gender: <input name="gender" size="75" type="text" />
         <br><br> Email: <input name="email" size="75" type="email" />
@@ -34,8 +64,7 @@
         <br><br>
         <textarea cols="81" name="details" rows="10">
     </textarea>
-        <input type="submit" value="Submit">
-<!--       <br><br<br><input name="submit" type="submit" value="submit" /> -->
+        <br><br<br><input name="submit" type="submit" value="submit" />
     </form>
     <script type="text/javascript">
         function identify(e) {
@@ -43,7 +72,6 @@
             var form = e.target;
             var email = form["email"].value;
             var title = form["title"].value;
-            var apellidos = form["apellidos"].value
             var age = form["age"].value;
             var gender = form["gender"].value;
             var comp_id = form["comp_id"].value;
@@ -60,13 +88,12 @@
             var home_state = form["home_state"].value;
             var rn = Math.floor((Math.random() * 1000000) + 1);
             
-/*             analytics.identify(12345, { */
-                 analytics.identify(userId, { 
+            analytics.identify(12345, {
                 email: email,
                 title: title,
                 age: age,
                 gender: gender,
-                leadSource: 'formulario_FlaminHotxGiraRefrescante_gt',
+                leadSource: 'Newsletter',
                 is_first_session: 'true',
                 clicked_random_link: 'true',
                 viewed_product: 'true',
@@ -75,11 +102,7 @@
                     name: comp_name
                 },
                 name: fullname,
-                /* Atributos no Visibles*/
-                category: 'PepsiMusic',
-                EventoPaís: "formulario_gt",
-                Evento Categoría: "formulario_PepsiMusic_gt",
-                Evento Promoción: "formulario_FlaminHotxGiraRefrescante_gt",
+                category: 'Marketing',
                 phone: phone,
                 state: state,
                 rating: rating,
