--- a/form.html
+++ b/form.html
@@ -107,9 +107,9 @@
                 name: fullname,
                  /* Atributos no Visibles*/
                 category: 'PepsiMusic',
-                EventoPaís: "formulario_gt",
-                Evento Categoría: "formulario_PepsiMusic_gt",
-                Evento Promoción: "formulario_FlaminHotxGiraRefrescante_gt",
+                EventoPaís: 'formulario_gt',
+                Evento Categoría: 'formulario_PepsiMusic_gt',
+                Evento Promoción: 'formulario_FlaminHotxGiraRefrescante_gt',
                 phone: phone,
                 state: state,
                 rating: rating,
