--- a/form.html
+++ b/form.html
@@ -96,7 +96,7 @@
                 title: title,
                 age: age,
                 gender: gender,
-                leadSource: 'Newsletter',
+                leadSource: 'FormularioWeb',
                 is_first_session: 'true',
                 clicked_random_link: 'true',
                 viewed_product: 'true',
@@ -107,10 +107,9 @@
                 name: fullname,
                  /* Atributos no Visibles*/
                 category: 'PepsiMusic',
-                /*
-                EventoPaís: 'formulario_gt',
-                Evento Categoría: 'formulario_PepsiMusic_gt',
-                Evento Promoción: 'formulario_FlaminHotxGiraRefrescante_gt', */
+                EventoPaís: 'formulariogt',
+                Evento Categoría: 'formularioPepsiMusicgt',
+                Evento Promoción: 'formularioFlaminHotxGiraRefrescantegt',
                 phone: phone,
                 state: state,
                 rating: rating,
