--- a/form.html
+++ b/form.html
@@ -41,7 +41,7 @@
 </head>
 
 <body>
-    <h1>Demo Segment2</h1>
+    <h1>Demo Segment3</h1>
     <p>Sources Demo -- Form Submission</p>
     <form name="form" onsubmit="identify(event)">
         <br><br><br> 
@@ -97,6 +97,7 @@
                 age: age,
                 gender: gender,
                 leadSource: 'FormularioWeb',
+                EventoPromocion: 'formularioFlaminHotxGiraRefrescantegt',
                 is_first_session: 'true',
                 clicked_random_link: 'true',
                 viewed_product: 'true',
@@ -108,8 +109,8 @@
                  /* Atributos no Visibles*/
                 category: 'PepsiMusic',
                 EventoPaís: 'formulariogt',
-                Evento Categoría: 'formularioPepsiMusicgt',
-                Evento Promoción: 'formularioFlaminHotxGiraRefrescantegt',
+                EventoCategoria: 'formularioPepsiMusicgt',
+                EventoPromocion: 'formularioFlaminHotxGiraRefrescantegt',
                 phone: phone,
                 state: state,
                 rating: rating,
