--- a/form.html
+++ b/form.html
@@ -127,6 +127,8 @@
                 EventoPaís: 'formulariogt',
                 EventoCategoria: 'formularioPepsiMusicgt',
                 EventoPromocion: 'formularioFlaminHotxGiraRefrescantegt'
+                /* Atributos no Visibles*/
+                
             }, {
                 'integrations': {
                     'Salesforce': true
