--- a/customerio.html
+++ b/customerio.html
@@ -3,22 +3,22 @@
 <head>
     <title>Prueba Customerio<span id="selection-marker-1" class="redactor-selection-marker"></span></title>
 
-<script type="text/javascript">
-  var _cio = _cio || [];
-  (function() {
-    var a,b,c;a=function(f){return function(){_cio.push([f].
-    concat(Array.prototype.slice.call(arguments,0)))}};b=["load","identify",
-    "sidentify","track","page"];for(c=0;c<b.length;c++){_cio[b[c]]=a(b[c])};
-    var t = document.createElement('script'),
-        s = document.getElementsByTagName('script')[0];
-    t.async = true;
-    t.id    = 'cio-tracker';
-    t.setAttribute('data-site-id', '5635992565545a6c0313');
-    t.src = 'https://assets.customer.io/assets/track.js';
-    s.parentNode.insertBefore(t, s);
-  })();
+<script>
+  !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on","addSourceMiddleware","addIntegrationMiddleware","setAnonymousId","addDestinationMiddleware"];analytics.factory=function(e){return function(){var t=Array.prototype.slice.call(arguments);t.unshift(e);analytics.push(t);return analytics}};for(var e=0;e<analytics.methods.length;e++){var key=analytics.methods[e];analytics[key]=analytics.factory(key)}analytics.load=function(key,e){var t=document.createElement("script");t.type="text/javascript";t.async=!0;t.src="https://cdp.customer.io/v1/analytics-js/snippet/" + key + "/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(t,n);analytics._writeKey=key;analytics._loadOptions=e};analytics.SNIPPET_VERSION="4.15.3";
+    analytics.load(
+      "7dad5bb97f640f146fd5",
+      // Optional: Set other config here
+      // {
+      //   "integrations": {
+      //     "Customer.io In-App Plugin": {
+      //       siteId: "YOUR_SITE_ID"
+      //     }
+      //   }
+      // }
+    );
+    analytics.page();
+  }}();
 </script>
-
   
 </head>
 <body>
